# AdventOfCode2022

day01/: day01  day01.cpp
day02/: day02  day02.cpp
day03/: CMakeLists.txt  day03  day03.cpp
day04/: day04  day04.cpp
day04/buil/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
day05/: day05  day05.cpp
day06/: day06  day06.cpp
day07/: day07  day07.cpp
